--- a/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.css
+++ b/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap");
+* {
+  font-family: Montserrat;
+
+}
+
+body {
+  background-color: #f5f7ff;
+}
 
 body,
 ul,
@@ -7,7 +14,6 @@ h1,
 p {
   margin: 0;
   padding: 0;
-  font-family: Montserrat;
 }
 
 body {
@@ -89,6 +95,11 @@ header nav ul li a {
   z-index: -1;
 }
 
+.background-video::-webkit-media-controls {
+  display: none !important;
+}
+
+
 .hero-content {
   position: relative;
   margin-top: 12%;
@@ -119,4 +130,101 @@ header nav ul li a {
   border-radius: 5px;
   text-decoration: none;
 
+}
+
+.imgefeito {
+ width: 100%;
+}
+
+.sobre {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px 50px 50px 50px;
+}
+
+.conteudo {
+  width: 40%;
+}
+
+.conteudo h3 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #000;
+}
+
+.conteudo h2 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #000;
+}
+
+.conteudo p {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 20px;
+  text-align: justify;
+  width: 70%;
+}
+
+.botao {
+  display: inline-block;
+  background-color: #2f55ff;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.cards {
+  width: 45%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.card {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+.card:nth-child(2),
+.card:nth-child(4) {
+  transform: translateY(-50px);
+}
+
+.card .icon {
+  width: 50px;
+  height: 50px;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.icon.hover {
+  display: none;
+}
+
+.card:hover .icon.normal {
+  display: none;
+}
+
+.card:hover .icon.hover {
+  display: inline-block;
+}
+
+.card h4 {
+  font-size: 18px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.card p {
+  font-size: 14px;
+  color: #666;
 }
