--- a/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.css
+++ b/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.css
@@ -1,230 +1,4 @@
-* {
-  font-family: Montserrat;
-
-}
-
-body {
-  background-color: #f5f7ff;
-}
-
-body,
-ul,
-li,
-h1,
-p {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   margin: 0;
-}
-
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 10;
-  background: rgba(0, 0, 0, 0.32);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5.8px);
-  -webkit-backdrop-filter: blur(5.8px);
-  padding: 0;
-}
-
-header nav img {
-  width: 100px;
-}
-
-header nav {
-  display: flex;
-  align-items: center;
-  max-width: 1200px;
-  justify-content: space-around;
-}
-
-header nav ul {
-  list-style: none;
-  display: flex;
-}
-
-header nav ul li {
-  margin-right: 100px;
-}
-
-header nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.menu-right a {
-  font-size: 18px;
-  color: white;
-  text-decoration: none;
-  margin-right: 50px;
-  font-weight: 500;
-}
-
-.hero {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 0;
-}
-
-.background-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.background-video::-webkit-media-controls {
-  display: none !important;
-}
-
-
-.hero-content {
-  position: relative;
-  margin-top: 12%;
-  z-index: 1;
-  color: white;
-  text-align: left;
-  left: 60px;
-  padding: 20px;
-}
-
-.hero-content h1 {
-  font-size: 30px;
-  text-transform: uppercase;
-  line-height: 1.3;
-  max-width: 40%;
-}
-
-.hero-content p {
-  font-size: 16px;
-  line-height: 1.5;
-  max-width: 40%;
-}
-
-.hero-content a {
-  background: #2E3FFF;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-decoration: none;
-
-}
-
-.imgefeito {
- width: 100%;
-}
-
-.sobre {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 20px 50px 50px 50px;
-}
-
-.conteudo {
-  width: 40%;
-}
-
-.conteudo h3 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #000;
-}
-
-.conteudo h2 {
-  font-size: 28px;
-  font-weight: bold;
-  color: #000;
-}
-
-.conteudo p {
-  font-size: 16px;
-  color: #333;
-  margin-bottom: 20px;
-  text-align: justify;
-  width: 70%;
-}
-
-.botao {
-  display: inline-block;
-  background-color: #2f55ff;
-  color: #fff;
-  padding: 12px 24px;
-  border-radius: 8px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.cards {
-  width: 45%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-
-.card {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  position: relative;
-  overflow: hidden;
-}
-
-.card:nth-child(2),
-.card:nth-child(4) {
-  transform: translateY(-50px);
-}
-
-.card .icon {
-  width: 50px;
-  height: 50px;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-  position: relative;
-  margin-bottom: 10px;
-}
-
-.icon.hover {
-  display: none;
-}
-
-.card:hover .icon.normal {
-  display: none;
-}
-
-.card:hover .icon.hover {
-  display: inline-block;
-}
-
-.card h4 {
-  font-size: 18px;
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-.card p {
-  font-size: 14px;
-  color: #666;
+  background-color: #F4F5FE;
 }
