--- a/Oportuniza.Application/src/styles.css
+++ b/Oportuniza.Application/src/styles.css
@@ -1,2 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap");
 
+* {
+  font-family: Montserrat;
+}
