feat: adicionando duas novas seções na landing page

--- a/Oportuniza.Application/src/app/pages/landing-page/hero/hero.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/hero/hero.component.html
@@ -1,6 +1,6 @@
-<section class="hero">
+<section class="hero" id="inicio">
   <video autoplay loop muted playsinline class="background-video">
-    <source src="assets/imglanding/video-fundo.mp4" type="video/mp4" />
+    <source src="assets/imglanding/hero/video-fundo.mp4" type="video/mp4" />
   </video>
   <div class="overlay"></div>
   <div class="hero-content">
