--- a/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
@@ -1,9 +1,6 @@
 
-
-<body>
-<app-header></app-header>
-<app-hero></app-hero>
-<app-sobre></app-sobre>
-<app-comofunciona></app-comofunciona>
-
-</body>
+  <app-header></app-header>
+  <app-hero></app-hero>
+  <app-sobre></app-sobre>
+  <app-comofunciona></app-comofunciona>
+  <app-vagas></app-vagas>
