--- a/Oportuniza.Application/src/app/pages/landing-page/sobre/sobre.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/sobre/sobre.component.html
@@ -1,84 +1,68 @@
 
-
-<img
-src="assets/imglanding/ondulação.png"
-alt="Efeito de onda"
-/>
-
+<img src="assets/imglanding/sobre/ondulação.png" class="img" alt="Efeito de onda" />
 <section class="sobre" id="sobre">
-<div class="conteudo">
-  <h3>SOBRE A OPORTUNIZA</h3>
-  <h2>Conectando Talentos e oportunidades.</h2>
-  <p>
-    A Oportuniza aproxima profissionais e empresas da sua região,
-    tornando a busca por emprego mais simples e eficiente. Cadastre seu
-    currículo e encontre a vaga ideal para você!
-  </p>
-  <a href="#" class="botao">Junte-se a nós</a>
-</div>
+  <div class="conteudo">
+    <h3>SOBRE A OPORTUNIZA</h3>
+    <h2>Conectando Talentos e oportunidades.</h2>
+    <p>
+      A Oportuniza aproxima profissionais e empresas da sua região, tornando a
+      busca por emprego mais simples e eficiente. Cadastre seu currículo e
+      encontre a vaga ideal para você!
+    </p>
+    <a href="#" class="botao">Junte-se a nós</a>
+  </div>
 
-<div class="cards">
-  <div class="card">
-    <img
-      class="icon normal"
-      src="assets/imglanding/work.png"
-      alt="Ícone"
-    />
-    <img
-      class="icon hover"
-      src="assets/imglanding/workinvert.png"
-      alt="Ícone"
-    />
-    <h4>Vagas Diversas</h4>
-    <p>Oportunidades para quem busca emprego em serviços essenciais.</p>
+  <div class="cards">
+    <div class="card">
+      <img class="icon normal" src="assets/imglanding/sobre/work.png" alt="Ícone de uma plaquinha escrito work in progress" />
+      <img
+        class="icon hover"
+        src="assets/imglanding/sobre/workinvert.png"
+        alt="Ícone de uma plaquinha escrito work in progress"
+      />
+      <h4>Vagas Diversas</h4>
+      <p>Oportunidades para quem busca emprego em serviços essenciais.</p>
+    </div>
+    <div class="card">
+      <img class="icon normal" src="assets/imglanding/sobre/men.png" alt="Ícone de um homem em um computador" />
+      <img
+        class="icon hover"
+        src="assets/imglanding/sobre/meninvert.png"
+        alt="Ícone de um homem em um computador"
+      />
+      <h4>Melhores Oportunidades</h4>
+      <p>Encontre vagas que combinam com a sua experiência e habilidades.</p>
+    </div>
+    <div class="card">
+      <img
+        class="icon normal"
+        src="assets/imglanding/sobre/business.png"
+        alt="Ícone de um grupo de perfis"
+      />
+      <img
+        class="icon hover"
+        src="assets/imglanding/sobre/businessinvert.png"
+        alt="Ícone de um grupo de perfis"
+      />
+      <h4>Conexão Empresarial</h4>
+      <p>
+        Conectamos você a empresas locais que buscam profissionais para diversas
+        funções essenciais.
+      </p>
+    </div>
+    <div class="card">
+      <img
+        class="icon normal"
+        src="assets/imglanding/sobre/platform.png"
+        alt="Ícone de um computador e uma seta indicando um site"
+      />
+      <img
+        class="icon hover"
+        src="assets/imglanding/sobre/platforminvert.png"
+        alt="Ícone de um computador e uma seta indicando um site"
+      />
+      <h4>Plataforma Intuitiva</h4>
+      <p>Experiência otimizada para facilitar sua busca por emprego.</p>
+    </div>
   </div>
-  <div class="card">
-    <img
-      class="icon normal"
-      src="assets/imglanding/men.png"
-      alt="Ícone"
-    />
-    <img
-      class="icon hover"
-      src="assets/imglanding/meninvert.png"
-      alt="Ícone"
-    />
-    <h4>Melhores Oportunidades</h4>
-    <p>
-      Encontre vagas que combinam com a sua experiência e habilidades.
-    </p>
-  </div>
-  <div class="card">
-    <img
-      class="icon normal"
-      src="assets/imglanding/business.png"
-      alt="Ícone"
-    />
-    <img
-      class="icon hover"
-      src="assets/imglanding/businessinvert.png"
-      alt="Ícone"
-    />
-    <h4>Conexão Empresarial</h4>
-    <p>
-      Conectamos você a empresas locais que buscam profissionais para
-      diversas funções essenciais.
-    </p>
-  </div>
-  <div class="card">
-    <img
-      class="icon normal"
-      src="assets/imglanding/platform.png"
-      alt="Ícone"
-    />
-    <img
-      class="icon hover"
-      src="assets/imglanding/platforminvert.png"
-      alt="Ícone"
-    />
-    <h4>Plataforma Intuitiva</h4>
-    <p>Experiência otimizada para facilitar sua busca por emprego.</p>
-  </div>
-</div>
 </section>
-
