feat: Adicionando a seção depoimentos na landing page

--- a/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
@@ -4,3 +4,4 @@
   <app-sobre></app-sobre>
   <app-comofunciona></app-comofunciona>
   <app-vagas></app-vagas>
+  <app-depoimentos></app-depoimentos>
