--- a/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/landing-page.component.html
@@ -5,3 +5,5 @@
   <app-comofunciona></app-comofunciona>
   <app-vagas></app-vagas>
   <app-depoimentos></app-depoimentos>
+  <app-bloco-acao></app-bloco-acao>
+  <app-footer></app-footer>
