--- a/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
@@ -1,4 +1,42 @@
-
 <footer>
-  <p>USUISIUS</p>
+  <div class="containerfooter">
+    <div class="images">
+      <img src="assets/imglanding/logo.png" alt="Logo Oportuniza" />
+      <div class="social">
+        <img src="assets/imglanding/footer/facebook.png" alt="Facebook" />
+        <img src="assets/imglanding/footer/social.png" alt="Instagram" />
+        <img src="assets/imglanding/footer/twitter.png" alt="Twitter" />
+      </div>
+    </div>
+
+    <div class="links">
+      <h1>Links</h1>
+      <div class="miniNav">
+        <ul>
+          <li><a href="">FAQ</a></li>
+          <li><a href="">SOBRE</a></li>
+          <li><a href="">VAGAS</a></li>
+          <li>
+            <a href="">POLITICA DE PRIVACIDADE</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="info">
+      <h1>Nosso contato</h1>
+        <div class="organização">
+          <img src="assets/imglanding/footer/phone.png" alt="icon telefone" />
+          <p>Telefone: (11) 9810-4567</p>
+        </div>
+        <div class="organização">
+          <img src="assets/imglanding/footer/email.png" alt="icon email" />
+          <p>E-mail: suporte&#64;oportuniza.com</p>
+        </div>
+        <div class="organização">
+          <img src="assets/imglanding/footer/local.png" alt="icon local" />
+          <p>Endereço: Rua dos bobos, 123 - São Paulo, SP</p>
+      </div>
+    </div>
+  </div>
 </footer>
