--- a/Oportuniza.Application/src/app/pages/landing-page/header/header.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/header/header.component.html
@@ -1,15 +1,18 @@
-<header>
+<header [ngClass]="{ 'header-hidden': isHeaderHidden }">
   <nav>
     <img src="assets/imglanding/logo.png" alt="Logo da empresa" />
+
     <ul>
       <li><a href="#inicio">Início</a></li>
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#vagas">Vagas</a></li>
       <li><a>|</a></li>
     </ul>
+
     <div class="menu-right">
       <a href="#" class="btn">Cadastre-se agora</a>
       <a href="#">Entrar</a>
     </div>
+
   </nav>
 </header>
