Adicionando telas: Login, Cadastro, Primeira Etapa e Termo de Uso

--- a/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="containerfooter">
     <div class="images">
-      <img src="assets/imglanding/logo.png" alt="Logo Oportuniza" />
+      <img src="assets/logo.png" alt="Logo Oportuniza" />
       <div class="social">
         <img src="assets/imglanding/footer/facebook.png" alt="Facebook" />
         <img src="assets/imglanding/footer/social.png" alt="Instagram" />
