--- a/Oportuniza.Application/src/app/pages/landing-page/hero/hero.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/hero/hero.component.html
@@ -12,6 +12,6 @@
       Conectamos trabalhadores e empresas da sua região para facilitar
       contratações em serviços essenciais.
     </p>
-    <a href="#" class="btn btn-primary">Saiba mais</a>
+    <a [routerLink]="['/cadastro']" class="btn btn-primary">Saiba mais</a>
   </div>
 </section>
