--- a/Oportuniza.Application/src/app/pages/landing-page/sobre/sobre.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/sobre/sobre.component.html
@@ -9,7 +9,7 @@
       busca por emprego mais simples e eficiente. Cadastre seu currículo e
       encontre a vaga ideal para você!
     </p>
-    <a href="#" class="botao">Junte-se a nós</a>
+    <a [routerLink]="['/cadastro']" class="botao">Junte-se a nós</a>
   </div>
 
   <div class="cards">
