--- a/Oportuniza.Application/src/app/pages/landing-page/vagas/vagas.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/vagas/vagas.component.html
@@ -10,7 +10,7 @@
           <p>LOCAL: ARARAQUARA - SP</p>
           <p>VALOR DA VAGA: R$45,86/H</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 
   <div class="job-card">
@@ -20,7 +20,7 @@
           <p>LOCAL: TAQUARITINGA - SP</p>
           <p>VALOR DA VAGA: R$2.000/MÊS</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 </div>
 
@@ -32,7 +32,7 @@
           <p>LOCAL: JABOTICABAL - SP</p>
           <p>VALOR DA VAGA: R$1.800/MÊS</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 
   <div class="job-card">
@@ -42,7 +42,7 @@
           <p>LOCAL: APARECIDA DO TABOADO - MS</p>
           <p>VALOR DA VAGA: R$2.000/MÊS</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 </div>
 
@@ -54,7 +54,7 @@
           <p>LOCAL: ARAÇATUBA - SP</p>
           <p>VALOR DA VAGA: R$100/DIA</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 
   <div class="job-card">
@@ -64,7 +64,7 @@
           <p>LOCAL: URAI - PR</p>
           <p>VALOR DA VAGA: R$2.500/MÊS</p>
       </div>
-      <button class="btn">EU QUERO!</button>
+      <button [routerLink]="['/cadastro']" class="btn">EU QUERO!</button>
   </div>
 </div>
 
