--- a/Oportuniza.Application/src/app/pages/landing-page/bloco-acao/bloco-acao.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/bloco-acao/bloco-acao.component.html
@@ -5,14 +5,14 @@
       <div class="icone">
         <img src="assets/imglanding/bloco-acao/vaga.png" alt="Vaga">
       </div>
-      <button class="botao">Publicar Vaga</button>
+      <button [routerLink]="['/cadastro']" class="botao">Publicar Vaga</button>
     </div>
     <div class="vertical-line"></div>
     <div class="opcao">
       <div class="icone">
         <img src="assets/imglanding/bloco-acao/curriculo.png" alt="Currículo">
       </div>
-      <button class="botao">Publicar Currículo</button>
+      <button [routerLink]="['/cadastro']" class="botao">Publicar Currículo</button>
     </div>
   </div>
 </div>
