--- a/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
+++ b/Oportuniza.Application/src/app/pages/landing-page/footer/footer.component.html
@@ -14,8 +14,8 @@
       <div class="miniNav">
         <ul>
           <li><a href="">FAQ</a></li>
-          <li><a href="">SOBRE</a></li>
-          <li><a href="">VAGAS</a></li>
+          <li><a href="#sobre">SOBRE</a></li>
+          <li><a href="#vagas">VAGAS</a></li>
           <li>
             <a href="">POLITICA DE PRIVACIDADE</a>
           </li>
