--- a/Oportuniza.Application/src/app/pages/login/login.component.html
+++ b/Oportuniza.Application/src/app/pages/login/login.component.html
@@ -22,7 +22,7 @@
           </button>
       </div>
 
-      <a href="#" class="forgot-password">Esqueceu a senha?</a>
+      <a [routerLink]="['/redefinir-senha']" class="forgot-password">Esqueceu a senha?</a>
 
       <button class="btn-primary">Continuar</button>
 
