--- a/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.html
+++ b/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.html
@@ -1,7 +1,16 @@
+
+
 <div class="overlay"></div>
 <div class="container">
   <div class="center-content">
     <div class="head">
+      <button
+      class="logo-btn"
+      style="cursor: pointer; background: transparent; border: transparent"
+    >
+      <img src="assets/logo.png" class="logo" alt="Logo" />
+    </button>
+
       <div class="step1">
         <span></span>
         <p>1° Etapa</p>
