--- a/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.css
+++ b/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.css
@@ -13,6 +13,14 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
+.logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 100px;
+}
+
+
 .container{
   background-image: url("../../../assets/etapas/background.png");
   background-size: cover;
