--- a/Oportuniza.Application/src/app/pages/terceira-etapa/terceira-etapa.component.css
+++ b/Oportuniza.Application/src/app/pages/terceira-etapa/terceira-etapa.component.css
@@ -3,6 +3,13 @@
   padding: 0;
   text-decoration: none;
 }
+.logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 100px;
+}
+
 
 .overlay {
   position: absolute;
