--- a/Oportuniza.Application/src/app/pages/cadastro/cadastro.component.html
+++ b/Oportuniza.Application/src/app/pages/cadastro/cadastro.component.html
@@ -62,7 +62,7 @@
 
     <div class="terms-container">
       <input type="checkbox" [(ngModel)]="acceptTerms" (change)="saveTermsAcceptance()" />
-      <p>Eu aceito os  <a href="/termo" style="color: blue;">Termos de Uso</a> e a  <a href="/termo" style="color: blue;">Política de Privacidade</a></p>
+      <p>Li e aceito os  <a href="/termo" style="color: blue;">Termos de Uso</a> e a  <br> <a href="/termo" style="color: blue;">Política de Privacidade</a></p>
     </div>
 
     <button class="btn-primary" (click)="register()">Cadastrar</button>
