--- a/Oportuniza.Application/src/app/pages/login/login.component.css
+++ b/Oportuniza.Application/src/app/pages/login/login.component.css
@@ -90,7 +90,7 @@ input:focus {
 }
 
 .forgot-password {
-  color: #007BFF;
+  color: #2E3FFF;
   font-size: 14px;
   margin-top: 5px;
   margin-bottom: 15px;
