--- a/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.css
+++ b/Oportuniza.Application/src/app/pages/primeira-etapa/primeira-etapa.component.css
@@ -20,6 +20,11 @@
   width: 100px;
 }
 
+button.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 
 .container{
   background-image: url("../../../assets/etapas/background.png");
