--- a/Oportuniza.Application/src/app/pages/redefinir-senha/redefinir-senha.component.html
+++ b/Oportuniza.Application/src/app/pages/redefinir-senha/redefinir-senha.component.html
@@ -7,7 +7,7 @@
   <div class="cadastro-right">
       <h2>Redefinir Senha</h2>
 
-      <p class="instruction-text">Digite seu e-mail para receber um link de redefinição de senha.</p>
+      <p class="instruction-text">Digite seu e-mail para receber um link de redefinição de senha..</p>
 
       <div class="input-container">
           <input type="email" placeholder="E-mail" [(ngModel)]="email">
