--- a/Oportuniza.Application/src/app/pages/segunda-etapa/segunda-etapa.component.html
+++ b/Oportuniza.Application/src/app/pages/segunda-etapa/segunda-etapa.component.html
@@ -3,11 +3,11 @@
   <div class="center-content">
     <div class="head">
       <button
-      class="logo-btn"
-      style="cursor: pointer; background: transparent; border: transparent"
-    >
-      <img src="assets/logo.png" class="logo" alt="Logo" />
-    </button>
+        class="logo-btn"
+        style="cursor: pointer; background: transparent; border: transparent"
+      >
+        <img src="assets/logo.png" class="logo" alt="Logo" />
+      </button>
       <div class="step1">
         <span></span>
         <p>1° Etapa</p>
@@ -24,17 +24,33 @@
     <div class="main-content">
       <div class="title">COMPLETE SEU PERFIL</div>
       <div class="center">
-        <div class="right">
-          <p>Eu quero ser <br> contratado </p>
+        <div
+          class="right"
+          [ngStyle]="{
+            backgroundColor: getBackgroundColor('contratado'),
+            color: getFontColor('contratado')
+          }"
+          (click)="selecionarBotao('contratado')"
+        >
+          <p>Eu quero ser <br /> contratado </p>
         </div>
-        <div class="left">
-          <p>Eu quero <br> contratar </p>
-
+        <div
+          class="left"
+          [ngStyle]="{
+            backgroundColor: getBackgroundColor('contratar'),
+            color: getFontColor('contratar')
+          }"
+          (click)="selecionarBotao('contratar')"
+        >
+          <p>Eu quero <br /> contratar </p>
         </div>
       </div>
       <div class="send-button">
         <button [routerLink]="['/primeira-etapa']">Voltar</button>
-        <button [routerLink]="['/terceira-etapa']">Proximo</button>
+        <button 
+          [routerLink]="['/terceira-etapa']" 
+          [disabled]="!selectedButton" 
+          [ngClass]="{ 'disabled': !selectedButton }">Próximo</button>
       </div>
       <div class="send"></div>
     </div>
