--- a/Oportuniza.Application/src/app/pages/terceira-etapa/terceira-etapa.component.html
+++ b/Oportuniza.Application/src/app/pages/terceira-etapa/terceira-etapa.component.html
@@ -3,11 +3,11 @@
   <div class="center-content">
     <div class="head">
       <button
-      class="logo-btn"
-      style="cursor: pointer; background: transparent; border: transparent"
-    >
-      <img src="assets/logo.png" class="logo" alt="Logo" />
-    </button>
+        class="logo-btn"
+        style="cursor: pointer; background: transparent; border: transparent"
+      >
+        <img src="assets/logo.png" class="logo" alt="Logo" />
+      </button>
       <div class="step1">
         <span></span>
         <p>1° Etapa</p>
@@ -25,23 +25,16 @@
       <div class="title">COMPLETE SEU PERFIL</div>
       <div class="center">
         <div class="title">
-          <p>Selecione suas categorias de interesse:</p>
+          <p>Digite suas categorias de interesse:</p>
         </div>
         <div class="right">
-          <div class="custom-select">
-            <select id="areas-select" class="styled-select">
-              <option value="" disabled selected>Selecione uma área...</option>
-              <option value="baba">Babá</option>
-              <option value="açougueiro">Açougueiro</option>
-              <option value="balconista">Balconista</option>
-              <option value="motorista">Motorista</option>
-              <option value="entregador">Entregador</option>
-              <option value="garçom">Garçom</option>
-              <option value="zelador">Zelador</option>
-              <option value="atendente">Atendente</option>
-              <option value="enfermeiro">Enfermeiro</option>
-              <option value="outro">Outros</option>
-            </select>
+          <div class="custom-input">
+            <input 
+              type="text" 
+              id="areas-input" 
+              class="styled-input" 
+              placeholder="Digite uma área de interesse..." 
+            />
           </div>
         </div>
       </div>
