--- a/Oportuniza.Application/src/app/pages/termo/termo.component.html
+++ b/Oportuniza.Application/src/app/pages/termo/termo.component.html
@@ -69,5 +69,6 @@
       </p>
     </div>
   </div>
-  <button [routerLink]="['/cadastro']" class="fixed-button">Aceitar e Continuar</button>
+  <button (click)="acceptTermsAndContinue()" class="fixed-button">Aceitar e Continuar</button>
+
 </div>
